--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,7 @@ spring.kafka.producer.properties.request.timeout.ms=10000
 spring.kafka.producer.properties.enable.idempotence=true
 spring.kafka.producer.properties.max.in.flight.idempotence=5
 
-logging.level.root=INFO
+
+logging.level.ru.alina=debug
+logging.level.kafka=error
 
